Het ingevulde huiswerk voor country information part two.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <img class="wereldkaart" src="assets/world_map.png" alt="Wereldkaart">
 </div>
 
+<p>Ga naar de <a href="indexpttwo.html">landen zoeker</a></p>
 <ul id="countries"></ul>
 
 <script type="module" src="app.js"></script>
